# opengl3d-scenery

./: .gitignore  CMakeLists.txt  README.md
dependencies/lib/win/: assimp-vc143-mt.exp  assimp-vc143-mt.lib
res/: const_material.frag  const_mesh.vert  const_sphere_tess.frag  const_sphere_tess.tese  gouraud_material.frag  gouraud_mesh.vert  gouraud_sphere_tess.frag  gouraud_sphere_tess.tese  material.frag  mesh.vert  skybox.frag  skybox.vert  sphere_tess.frag  sphere_tess.tesc  sphere_tess.tese  sphere_tess.vert
src/: main.cpp
src/app/: bspline.cpp  bspline.h  fp_camera.cpp  fp_camera.hpp  imgui_ext.cpp  imgui_ext.hpp  light_bulb.cpp  light_bulb.hpp  terrain.cpp  terrain.hpp  tess_sphere.cpp  tess_sphere.hpp
src/renderer/: camera.cpp  camera.hpp  gl_debug.h  lighting.hpp  meshes.hpp  shaders.hpp  textures.hpp  transform3d.cpp  transform3d.hpp  window.cpp  window.hpp
src/renderer/lighting/: directional_light.cpp  directional_light.hpp  light.hpp  material.cpp  material.hpp  material_resource.cpp  material_resource.hpp  point_light.cpp  point_light.hpp  spotlight.cpp  spotlight.hpp
src/renderer/meshes/: drawable.hpp  mesh_array_instance.cpp  mesh_array_instance.hpp  mesh_instance.cpp  mesh_instance.hpp  mesh_vertex.cpp  mesh_vertex.hpp
src/renderer/meshes/mesh_resources/: box_mesh_resource.cpp  box_mesh_resource.hpp  mesh_array_resource.cpp  mesh_array_resource.hpp  mesh_resource.cpp  mesh_resource.hpp  plane_mesh_resource.cpp  plane_mesh_resource.hpp  sphere_mesh_resource.cpp  sphere_mesh_resource.hpp
src/renderer/shaders/: shader_object.cpp  shader_object.hpp  shader_program.cpp  shader_program.hpp  shader_resource.cpp  shader_resource.hpp
src/renderer/textures/: image.cpp  image.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp  texture_resource.cpp  texture_resource.hpp
